# design-assistant

./: .gitignore  Dockerfile.backend  README.md  docker-compose.yml  pyproject.toml
.agent/rules/: project-management.md
agents/: pyproject.toml
agents/src/agents/: __init__.py  builder.py  common.py  copywriting.py  creative_assitant.py  examples.py  image.py  long_term_memory.py  planner.py  rednote_agent.py  seedream_prompt_assistant.py  supervisor_agent.py  types.py
alembic/: env.py
alembic/versions/: 0e851bb23603_init.py  e32744a9cd8f_add_prompt.py
api/: pyproject.toml
api/src/api/: deps.py  lifespan.py  main.py  states.py  utils.py
api/src/api/core/: StreamProcessor.py  db.py  memory.py  websocket.py
api/src/api/domain/: agent.py  canvas.py  chat.py  model.py  prompt.py  tool.py
api/src/api/models/: __init__.py  base.py  canvas.py  chat.py  prompt.py
api/src/api/routes/: __init__.py  agent.py  canvas.py  chat.py  config.py  file.py  prompt.py  root.py  tool.py  websocket.py  workspace.py
api/src/api/schemas/: canvas.py  chat.py
api/src/api/services/: canvas.py  chat.py  jaaz_magic_agent.py  jaaz_service.py  response.py  stream.py  websocket.py
langgraph-tools/: pyproject.toml
langgraph-tools/src/langgraph_tools/: __init__.py
langgraph-tools/src/langgraph_tools/images/: __init__.py  gemini.py  qwen.py  seedream.py  seedream4_5.py
lib/: README.md  pyproject.toml
lib/src/lib/: __init__.py  config.py  image.py  utils.py
scripts/: init_postgres_saver.py  load_prompts_to_db.py
tools/: pyproject.toml
tools/src/tools/: calendar.py  hotspot.py  rednote.py  types.py
tools/src/tools/images/: __init__.py  gemini.py  layer_splitter.py  qwen.py  remove_background.py  seedream.py  seedream4_5.py
web/: Dockerfile  fetch_huaban.cjs  fetch_huaban.js  index.html  nginx.conf  package.json  pnpm-lock.yaml  prettier.config.js  tsconfig.json  tsconfig.lib.json  vite.config.ts
web/src/: App.tsx  constants.ts  index.d.ts  index.ts  main.tsx  route-tree.gen.ts
web/src/api/: auth.ts  billing.ts  canvas.ts  chat.ts  config.ts  huaban.ts  knowledge.ts  magic.ts  model.ts  prompt.ts  settings.ts  upload.ts
web/src/assets/style/: canvas.css
web/src/components/: TopMenu.tsx
web/src/components/agent_studio/: AgentNode.tsx  AgentSettings.tsx  AgentStudio.tsx
web/src/components/auth/: LoginDialog.tsx  PointsDisplay.tsx  UserMenu.tsx
web/src/components/canvas/: CanvasExcali.tsx  CanvasExport.tsx  CanvasHeader.tsx  VideoElement.tsx
web/src/components/canvas/menu/: CanvasMenuButton.tsx  CanvasMenuIcon.tsx  CanvasToolMenu.tsx  CanvasViewMenu.tsx
web/src/components/canvas/pop-bar/: CanvasMagicGenerator.tsx  CanvasPopbar.tsx  CanvasPopbarContainer.tsx  index.tsx
web/src/components/chat/: Chat.tsx  ChatHistory.tsx  ChatMagicGenerator.tsx  ChatTextarea.tsx  IconCarousel.tsx  ImageConfigSelector.tsx  Markdown.tsx  ModelSelectorV2.tsx  ModelSelectorV3.tsx  MultiChoicePrompt.tsx  QuantitySelector.tsx  SessionSelector.tsx  ShareTemplateDialog.tsx  SingleChoicePrompt.tsx  Spinner.tsx  ToolcallProgressUpdate.tsx
web/src/components/chat/Message/: Image.tsx  MixedContent.tsx  Regular.tsx  TextFoldTag.tsx  ToolCallContent.tsx  ToolCallTag.tsx  WritePlanToolcall.tsx
web/src/components/comfyui/: InstallComfyUIDialog.tsx  InstallProgressDialog.tsx  UninstallProgressDialog.tsx
web/src/components/common/: Blur.tsx  DialogContent.tsx  ErrorBoundary.tsx  LanguageSwitcher.tsx  NotificationPanel.tsx  UpdateNotificationDialog.tsx
web/src/components/home/: CanvasCard.tsx  CanvasDeleteDialog.tsx  CanvasList.tsx  HuabanList.tsx  PromptCard.tsx  PromptList.tsx
web/src/components/knowledge/: Editor.tsx  Knowledge.tsx
web/src/components/material/: FilePreviewModal.tsx  MaterialManager.tsx
web/src/components/settings/: AddModelsList.tsx  AddProviderDialog.tsx  ComfyuiSetting.tsx  ComfyuiWorkflowSetting.tsx  CommonSetting.tsx  JaazSetting.tsx
web/src/components/settings/dialog/: index.tsx  providers.tsx  proxy.tsx  sidebar.tsx
web/src/components/theme/: ThemeButton.tsx  ThemeProvider.tsx
web/src/components/ui/: Spinner.tsx  avatar.tsx  badge.tsx  button.tsx  card.tsx  checkbox.tsx  combobox.tsx  context-menu.tsx  dialog.tsx  dropdown-menu.tsx  hotkey.tsx  label.tsx  popover.tsx  progress.tsx  resizable.tsx  scroll-area.tsx  select.tsx  separator.tsx  sheet.tsx  shiny-text.tsx  sidebar.tsx  slider.tsx  switch.tsx  tabs.tsx  tooltip.tsx  video-player.tsx
web/src/contexts/: AuthContext.tsx  canvas.tsx  configs.tsx  socket.tsx  theme.tsx
web/src/examples/: exampleMessages.ts
web/src/hooks/: use-balance.ts  use-debounce.ts  use-notifications.ts  use-theme.ts
web/src/i18n/: README.md  index.ts
web/src/i18n/locales/en/: canvas.json  chat.json  common.json  home.json  settings.json
web/src/i18n/locales/zh-CN/: canvas.json  chat.json  common.json  home.json  settings.json
web/src/json/: huaban_prompts.json
web/src/lib/: api-client.ts  event.ts  notifications.ts  socket.ts  utils.ts
web/src/routes/: assets.tsx  canvas.$id.tsx  index.tsx
web/src/stores/: configs.ts
web/src/types/: prompt.ts  socket.ts  types.ts
web/src/utils/: formatDate.ts  imageUtils.ts  pngMetadata.ts
