[project]
name = "design-assistant"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "api",
    "lib",
    "tools",
    "agents",
    "langgraph-tools",
    "pydantic>=2.12.3",
    "httpx[http2,socks]>=0.28.1",
    "pydantic-settings>=2.12.0",
    "langchain[google-genai,openai]>=1.0.3",
    "langgraph>=1.0.3",
    "pillow>=12.0.0",
    "oss2>=2.19.1",
    "fastapi[standard]>=0.123.0",
    "uvicorn>=0.38.0",
    "python-socketio>=5.14.3",
    "psycopg[binary,pool]>=3.2.13",
    "langgraph-checkpoint-postgres>=3.0.1",
    "langgraph-checkpoint>=3.0.1",
    "google-genai>=1.52.0",
    "sqlalchemy[asyncio]>=2.0.44",
    "alembic>=1.17.2",
    "langchain-google-genai>=3.1.0",
    "redis>=7.1.0",
    "rembg[gpu]>=2.0.67;sys_platform == 'linux'",
    "rembg[cpu]>=2.0.67;sys_platform == 'darwin'",
    "uuid-utils>=0.11.1",
    "langchain-deepseek>=1.0.1",
    "dashscope>=1.25.2",
    "nacos-sdk-python>=3.0.0",
    "langchain-google-genai>=4",
]

[tool.uv.workspace]
members = [
    "api",
    "lib",
    "tools",
    "agents",
    "langgraph-tools",
]

[tool.uv]
package = false

[build-system]
requires = ["uv_build"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "ipython>=9.8.0",
    "pip>=25.3",
    "ruff>=0.14.8",
    "uv-build>=0.9.7",
]

[tool.uv.sources]
api = { workspace = true }
lib = { workspace = true }
tools = { workspace = true }
agents = { workspace = true }
langgraph-tools = { workspace = true }

[tool.ruff]
line-length = 120
target-version = "py313"
#output-format = "grouped" # openai-python
preview = true

[tool.ruff.format]
docstring-code-format = true
quote-style = "double"



[tool.ruff.lint]

# 启用规则
# E: pycodestyle (错误)
# F: Pyflakes (核心功能，包括检测未使用的导入 F401)
# I: isort (导入排序)
# W: pycodestyle (警告)
# B: flake8-bugbear (发现潜在 Bug)
# UP: pyupgrade (自动升级旧语法)
select = ["E", "F",
    # remove unused imports
    "F401",
    "I", "W", "B", "UP"]

#ignore = []

ignore = [
    # mutable defaults
    "B006",
]

[tool.ruff.lint.isort]
# 将自家模块放入 first-party 块中 (可选)
known-first-party = ["api", "lib", "tools", "langgraph-tools", "agents"]
length-sort = true
length-sort-straight = true
combine-as-imports = true   # 将 from import 组合 (推荐)

[tool.ty.environment]
#root = ["api", "tools", "lib", "agents", "langgraph-tools"]
