[project]
name = "api"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "wwfyde", email = "wwfyde@gmail.com" }
]
requires-python = ">=3.12"
dependencies = []

[project.scripts]
api = "api.main:main"

[build-system]
requires = ["uv_build"]
build-backend = "uv_build"
