[project]
name = "langgraph-tools"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "wwfyde", email = "wwfyde@gmail.com" }
]
requires-python = ">=3.12"
dependencies = []

[project.scripts]
langraph-tools = "langraph_tools:main"

[build-system]
requires = ["uv_build>=0.9.10,<0.10.0"]
build-backend = "uv_build"
