[project]
name = "lib"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "wwfyde", email = "wwfyde@gmail.com" }
]
requires-python = ">=3.12"
dependencies = []

[build-system]
requires = ["uv_build"]
build-backend = "uv_build"

[tool.uv]
package = true

[project.scripts]
lib = "lib:hello"
